--- a/templates/metagear.env
+++ b/templates/metagear.env
@@ -1,6 +1,6 @@
 #!/usr/bin/env bash
 
-export NXF_SINGULARITY_CACHEDIR=$HOME/.metagear/singularity_cache
+export NXF_SINGULARITY_CACHEDIR=$INSTALL_DIR/singularity_cache
 
 RUN_PROFILES="-profile docker,docker_custom"
 NF_WORK="./nf_work"
