--- a/templates/metagear.config
+++ b/templates/metagear.config
@@ -14,16 +14,18 @@ profiles {
 params {
 
     /* RESOURCES */
-    max_cpus = 4
-    max_memory = '16GB'
+    max_cpus = ${MAX_CPUS}
+    max_memory = '${MAX_MEMORY}GB'
     max_time = '10h'
 
     /* DATABASES */
-    kneaddata_refdb = ["~/.metagear/databases/ref_hg37"]
+    databases_root = "$INSTALL_DIR/databases"
+    
+    kneaddata_refdb = ["$INSTALL_DIR/databases/ref_hg37"]
 
-    metaphlan_db = "~/.metagear/databases/metaphlan4.1"
+    metaphlan_db = "$INSTALL_DIR/databases/metaphlan4.1"
 
-    humann3_uniref90 = "~/.metagear/databases/humann3.9/uniref90"
-    humann3_nucleo = "~/.metagear/databases/humann3.9/nucleo"
+    humann3_uniref90 = "$INSTALL_DIR/databases/humann3.9/uniref90"
+    humann3_nucleo = "$INSTALL_DIR/databases/humann3.9/nucleo"
 
 }
